--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ DB_NAME='tribune'
 DB_USER='dunyung1'
 DB_PASSWORD='iamyung1'
 DB_HOST='127.0.0.1'
-MODE='dev' #set to 'prod' in production
-ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
+MODE='prod' 
+ALLOWED_HOSTS='*'
 DISABLE_COLLECTSTATIC=1
